--- a/Unreal Projects/cpp_quick_start/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Projects/cpp_quick_start/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,13 +76,82 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/StarterContent/Maps/Minimal_Default
+
 [EditorStartup]
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [ModuleFileTracking]
-cpp_quick_start.TimeStamp=2022.12.26-07.24.59
-cpp_quick_start.LastCompileMethod=Unknown
+cpp_quick_start.TimeStamp=2022.12.26-09.40.04
+cpp_quick_start.LastCompileMethod=Runtime
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[PlacementMode]
+RecentlyPlaced=/Script/cpp_quick_start.FloatingActor;
+
+[DetailCategories]
+FloatingActor.Actor=True
+FloatingActor.Input=True
+FloatingActor.Replication=True
+FloatingActor.Cooking=True
+FloatingActor.Tags=True
+FloatingActor.VirtualTexture=True
+FloatingActor.Navigation=True
+FloatingActor.Rendering=True
+FloatingActor.Lighting=True
+FloatingActor.Collision=True
+FloatingActor.Physics=True
+FloatingActor.Materials=True
+FloatingActor.StaticMesh=True
+FloatingActor.TransformCommon=True
+FloatingActor.FloatingActor=True
+BP_FloatingActor_C.Tick=True
+BP_FloatingActor_C.FloatingActor=True
+BP_FloatingActor_C.Replication=True
+BP_FloatingActor_C.Rendering=True
+BP_FloatingActor_C.Collision=True
+BP_FloatingActor_C.Actor=True
+BP_FloatingActor_C.Input=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/StarterContent/Blueprints/BP_FloatingActor
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
