--- a/Unreal Projects/cpp_quick_start/cpp_quick_start.uproject
+++ b/Unreal Projects/cpp_quick_start/cpp_quick_start.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "cpp_quick_start",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
