#21 このプラグインはShader Codeを含むので、LoadingPhaseがデフォルトのままだとShader Compileができなくてクラッシュします。PostConfigInitにしておきましょう。

--- a/Unreal Projects/AddPassProject/Plugins/PostOpaqueDrawTest/PostOpaqueDrawTest.uplugin
+++ b/Unreal Projects/AddPassProject/Plugins/PostOpaqueDrawTest/PostOpaqueDrawTest.uplugin
@@ -18,7 +18,7 @@
 		{
 			"Name": "PostOpaqueDrawTest",
 			"Type": "Runtime",
-			"LoadingPhase": "PreLoadingScreen"
+			"LoadingPhase": "PostConfigInit"
 		}
 	]
 }
